--- a/index.html
+++ b/index.html
@@ -97,6 +97,27 @@
             border-color: var(--accent);
         }
 
+        .dashboard-link {
+            display: inline-block;
+            color: var(--accent);
+            text-decoration: none;
+            font-size: 0.8rem;
+            border: 1px solid var(--accent);
+            padding: 8px 16px;
+            border-radius: 4px;
+            transition: all 0.3s ease;
+            box-shadow: 0 0 5px rgba(0, 255, 136, 0.2);
+            background: rgba(0, 255, 136, 0.05);
+            letter-spacing: 1px;
+        }
+
+        .dashboard-link:hover {
+            background: var(--accent);
+            color: #000;
+            box-shadow: 0 0 15px var(--accent);
+            transform: translateY(-2px);
+        }
+
         .status {
             position: absolute;
             bottom: -60px;
@@ -165,6 +186,11 @@
 
         <div class="status">
             System Status: <span style="color: var(--accent);">Waiting for Human Interaction</span>
+            <div style="margin-top: 15px;">
+                <a href="dashboard.html" class="dashboard-link">
+                    ENTER DASHBOARD
+                </a>
+            </div>
         </div>
     </div>
 
